# NMSMod

./: .gitignore  Cargo.toml  README.md  install.sh  nmsmod_launcher.c  uninstall.sh
src/: config.rs  constants.rs  game.rs  load.rs  main.rs  mbin.rs  mxml.rs  pak.rs
src/pak/: api.rs  compression.rs  error.rs  utils.rs
