[package]
name = "nmsmod"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
zstd = "0.13.3"
lz4 = "1.28.1"
md-5 = "0.11.0"
byteorder = "1.5.0"
thiserror = "2.0.18"
rayon = "1.12.0"
memmap2 = "0.9.10"
walkdir = "2.5.0"
tempfile = "3.27.0"
once_cell = "1.21.4"
tokio = { version = "1.52.3", features = ["full"] }
indicatif = { version = "0.18.4", features = ["rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.106"
colored = "3.1.1"
plist = "1.9.0"
xmltree = "0.12.0"